<resources>
    <string name="app_name">VoteForReddit</string>
    <string name="posts">Posts</string>
    <string name="search">Search</string>
    <string name="subs">Subs</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="subreddits">Subreddits</string>
    <string name="frontpage">Frontpage</string>
    <string name="popular">Popular</string>
    <string name="all">All</string>
    <string name="sort">Sort</string>
    <string name="hot">Hot</string>
    <string name="newSort">New</string>
    <string name="rising">Rising</string>
    <string name="top">Top</string>
    <string name="controversial">Controversial</string>
    <string name="nsfw">NSFW</string>
    <string name="comments">Comments</string>
    <string name="load_more">Load more</string>
    <string name="search_hint">Search reddit</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="actions">Actions</string>
    <string name="subreddit_name">%1s%2$s</string>
    <string name="posts_search">Posts with %1$s</string>
    <string name="search_check_text">Limit to r/%1$s</string>
    <string name="search_hint_subreddit">Search r/%1$s</string>
    <string name="all_time">All Time</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="relevance">Relevance</string>

    <string-array name="search_time_period">
        <item>@string/all_time</item>
        <item>@string/year</item>
        <item>@string/month</item>
        <item>@string/week</item>
        <item>@string/day</item>
    </string-array>

    <string-array name="search_sort">
        <item>@string/relevance</item>
        <item>@string/hot</item>
        <item>@string/top</item>
        <item>@string/newSort</item>
        <item>@string/comments</item>
    </string-array>
</resources>
