<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_posts"
        android:icon="@drawable/bottom_nav_posts_selector"
        android:title="@string/posts" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_subs"
        android:icon="@drawable/bottom_nav_subreddits_selector"
        android:title="@string/subreddits" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/bottom_nav_inbox_selector"
        android:title="@string/inbox" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/bottom_nav_profile_selector"
        android:title="@string/profile" />
</menu>