<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sorting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:text="@string/sorting"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hot_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hot"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sorting_title" />

    <TextView
        android:id="@+id/new_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newSort"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_text_view" />

    <TextView
        android:id="@+id/rising_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rising"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_text_view" />

    <TextView
        android:id="@+id/top_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rising_text_view" />

    <TextView
        android:id="@+id/controversial_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/controversial"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>